Complete Parsing Fixtures Data & improvement logic RecyclerView

--- a/app/src/main/res/layout/fragment_fixture.xml
+++ b/app/src/main/res/layout/fragment_fixture.xml
@@ -1,14 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FixtureFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="fixture_fragment" />
+    <LinearLayout
+        android:id="@+id/date_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp">
 
-</FrameLayout>
+        <Button
+            android:id="@+id/prevFixture"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_arrow_back"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/fixture_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:text="2021-12-29" />
+
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_arrow_forward"
+            android:textSize="18sp" />
+    </LinearLayout>
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progressbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/date_container"/>-->
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/league_fixture_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/date_container"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="30dp" />
+</RelativeLayout>
