--- a/app/src/main/res/layout/fragment_leagues.xml
+++ b/app/src/main/res/layout/fragment_leagues.xml
@@ -5,10 +5,68 @@
     android:layout_height="match_parent"
     tools:context=".LeaguesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="league table fragment" />
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_weight="1"
+            android:id="@+id/epl_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:text="English Premier League"
+            android:textStyle="bold"
+            android:onClick="hou"
+            android:textSize="25sp"/>
+
+        <TextView
+            android:id="@+id/laliga_textview"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:textAlignment="center"
+            android:text="LA LIGA"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="25sp"/>
+
+        <TextView
+            android:id="@+id/serie_a_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:text="SERIE A"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textSize="25sp"/>
+
+        <TextView
+            android:id="@+id/bundesliga_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:text="BUNDESLIGA"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="25sp"/>
+
+        <TextView
+            android:id="@+id/ligue1_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:text="LIGUE 1"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="25sp"/>
+
+
+    </LinearLayout>
 
 </FrameLayout>
