--- a/app/src/main/res/layout/fragment_leagues.xml
+++ b/app/src/main/res/layout/fragment_leagues.xml
@@ -11,60 +11,65 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_weight="1"
             android:id="@+id/epl_textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textAlignment="center"
+            android:layout_weight="1"
             android:gravity="center"
-            android:text="English Premier League"
-            android:textStyle="bold"
             android:onClick="hou"
-            android:textSize="25sp"/>
+            android:text="Premier League"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/laliga_textview"
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_height="0dp"
-            android:textAlignment="center"
-            android:text="LA LIGA"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textStyle="bold"
-            android:textSize="25sp"/>
+            android:text="LA LIGA"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/serie_a_textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:textAlignment="center"
-            android:text="SERIE A"
-            android:textStyle="bold"
             android:gravity="center"
-            android:textSize="25sp"/>
+            android:text="SERIE A"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/bundesliga_textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:textAlignment="center"
-            android:text="BUNDESLIGA"
             android:gravity="center"
-            android:textStyle="bold"
-            android:textSize="25sp"/>
+            android:text="BUNDESLIGA"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/ligue1_textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textAlignment="center"
             android:layout_weight="1"
-            android:text="LIGUE 1"
             android:gravity="center"
-            android:textStyle="bold"
-            android:textSize="25sp"/>
+            android:text="LIGUE 1"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
