add Promotion(ChampionsLeague, EuropaLeague), Relegation Check with Colors

--- a/app/src/main/res/layout/standing_item.xml
+++ b/app/src/main/res/layout/standing_item.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="0.1"
-        android:background="@color/teal_200" />
+        android:background="@color/white"/>
 
     <LinearLayout
         android:layout_width="0dp"
