add Team Logo Image in LeagueStanding with picasso

--- a/app/src/main/res/layout/standing_item.xml
+++ b/app/src/main/res/layout/standing_item.xml
@@ -24,11 +24,18 @@
             android:text="1"
             android:textAlignment="center" />
 
+        <!--            android:layout_weight="0.33"-->
+        <ImageView
+            android:id="@+id/team_logo"
+            android:layout_width="20dp"
+            android:layout_height="match_parent" />
+
         <TextView
             android:id="@+id/team_name_textview"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="4"
+            android:layout_weight="3.5"
+            android:layout_marginLeft="10dp"
             android:text="Manchester City"
             android:textColor="@color/black" />
 
@@ -85,6 +92,7 @@
             android:gravity="right"
             android:text="50"
             android:textAlignment="gravity"
+            android:layout_marginRight="2dp"
             android:textColor="@color/black" />
     </LinearLayout>
 
