--- a/app/src/main/res/layout/fixture.xml
+++ b/app/src/main/res/layout/fixture.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity=""
-    android:orientation="horizontal"
+    android:layout_height="80dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingVertical="10dp">
 
     <TextView
@@ -11,21 +10,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="59'"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:textSize="16sp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
 
     <TextView
         android:id="@+id/team_home"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintWidth_percent="0.32"
         android:layout_toLeftOf="@id/score_or_time"
-        android:ems="10"
-        android:layout_marginLeft="40dp"
         android:ellipsize="end"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/team_home_logo"
+        app:layout_constraintTop_toBottomOf="@id/elapsed"
         android:maxLines="1"
+        android:textAlignment="textEnd"
+        android:layout_marginTop="5dp"
         android:text="borussia dortmund"
+        app:layout_constraintHorizontal_bias="0.5"
         android:textSize="16sp" />
+
+    <ImageView
+        android:id="@+id/team_home_logo"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toBottomOf="@id/elapsed"
+        app:layout_constraintEnd_toStartOf="@id/score_or_time"
+        android:layout_marginRight="10dp"
+        />
 
     <!-- 경기가 아직 시작되지 않았거나(경기 시작 시간 출력), 연기될 경우(ex: "연기") 상태 출력 -->
     <TextView
@@ -36,20 +53,35 @@
         android:layout_marginHorizontal="20dp"
         android:text="1-1"
         android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/elapsed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:textAlignment="textEnd"
-        android:id="@+id/team_away"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/score_or_time"
-        android:ellipsize="end"
-        android:ems="14"
-        android:maxLines="1"
-        android:text="Tottenham Hotspur"
-        android:layout_marginRight="20dp"
-        android:textSize="16sp" />
+    <ImageView
+        android:id="@+id/team_away_logo"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintStart_toEndOf="@id/score_or_time"
+        app:layout_constraintTop_toBottomOf="@id/elapsed"
+        android:layout_marginLeft="10dp"
+        android:scaleType="fitXY"
+        />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/team_away"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintWidth_percent="0.32"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="Chelsea"
+        android:textSize="16sp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/team_away_logo"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@id/elapsed" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
