--- a/app/src/main/res/layout/fixture.xml
+++ b/app/src/main/res/layout/fixture.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingVertical="10dp">
 
     <TextView
@@ -12,37 +12,36 @@
         android:text="59'"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/team_home"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintWidth_percent="0.32"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@id/score_or_time"
         android:ellipsize="end"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/team_home_logo"
-        app:layout_constraintTop_toBottomOf="@id/elapsed"
         android:maxLines="1"
-        android:textAlignment="textEnd"
-        android:layout_marginTop="5dp"
         android:text="borussia dortmund"
+        android:textAlignment="textEnd"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@id/team_home_logo"
         app:layout_constraintHorizontal_bias="0.5"
-        android:textSize="16sp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/elapsed"
+        app:layout_constraintWidth_percent="0.32" />
 
     <ImageView
         android:id="@+id/team_home_logo"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        app:layout_constraintTop_toBottomOf="@id/elapsed"
-        app:layout_constraintEnd_toStartOf="@id/score_or_time"
         android:layout_marginRight="10dp"
-        />
+        app:layout_constraintEnd_toStartOf="@id/score_or_time"
+        app:layout_constraintTop_toBottomOf="@id/elapsed" />
 
     <!-- 경기가 아직 시작되지 않았거나(경기 시작 시간 출력), 연기될 경우(ex: "연기") 상태 출력 -->
     <TextView
@@ -53,35 +52,35 @@
         android:layout_marginHorizontal="20dp"
         android:text="1-1"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/elapsed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/elapsed" />
 
     <ImageView
         android:id="@+id/team_away_logo"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        app:layout_constraintStart_toEndOf="@id/score_or_time"
-        app:layout_constraintTop_toBottomOf="@id/elapsed"
         android:layout_marginLeft="10dp"
         android:scaleType="fitXY"
-        />
+        app:layout_constraintStart_toEndOf="@id/score_or_time"
+        app:layout_constraintTop_toBottomOf="@id/elapsed" />
 
     <TextView
         android:id="@+id/team_away"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintWidth_percent="0.32"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="Chelsea"
         android:textSize="16sp"
-        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/team_away_logo"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toBottomOf="@id/elapsed" />
+        app:layout_constraintStart_toEndOf="@id/team_away_logo"
+        app:layout_constraintTop_toBottomOf="@id/elapsed"
+        app:layout_constraintWidth_percent="0.32" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
